src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>DWP_Peru_Generic</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>01</fullName>
        </values>
        <values>
            <fullName>02</fullName>
        </values>
        <values>
            <fullName>03</fullName>
        </values>
        <values>
            <fullName>04</fullName>
        </values>
        <values>
            <fullName>05</fullName>
        </values>
        <values>
            <fullName>06</fullName>
        </values>
        <values>
            <fullName>07</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ruta</fullName>
        <description>Ruta</description>
        <isActive>true</isActive>
        <values>
            <fullName>01</fullName>
        </values>
        <values>
            <fullName>02</fullName>
        </values>
        <values>
            <fullName>03</fullName>
        </values>
        <values>
            <fullName>04</fullName>
        </values>
        <values>
            <fullName>05</fullName>
        </values>
        <values>
            <fullName>06</fullName>
        </values>
        <values>
            <fullName>07</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Opp_Creation_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branch_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates an opportunity with a branch</description>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_alert__c</fullName>
        <formula>Account.alert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contract_id__c</fullName>
        <description>Opportunity contract id</description>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_expiry_date__c</fullName>
        <description>opportunity expirition date</description>
        <label>Renewal expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opportunity_origin_name__c</fullName>
        <description>Origin name</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>opportunity_planning_date__c</fullName>
        <description>Planning date of an opportunity</description>
        <label>Planning date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opportunity_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>a product related to an opportunity</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>opportunity_product_family__c</fullName>
        <description>Product family in an opportunity</description>
        <label>Product family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
<fields>
        <fullName>opportunity_status_type__c</fullName>
        <description>Status of an opportunity</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rejection_amount__c</fullName>
        <description>Currency lost amount</description>
        <label>Loss amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rejection_period_num__c</fullName>
        <description>Number of period when is loss</description>
        <label>Loss period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rejection_rate_per__c</fullName>
        <description>Percentage of loss</description>
        <label>Loss rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rejection_reason_id__c</fullName>
        <label>Loss reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rejection_winner_entity_name__c</fullName>
        <description>bank institution who wins the opportunity</description>
        <label>Loss winner bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>renewal_contract_id__c</fullName>
        <description>Id from a renewal contract for opportunity</description>
        <label>Renwal contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>success_probability_desc__c</fullName>
        <description>Success Probality</description>
        <label>Success probability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <description>Internal control code</description>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>activated by Process</description>
        <label>isProcess</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Opp_RT_01</fullName>
        <active>true</active>
        <businessProcess>Ruta</businessProcess>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opp_RT_02</fullName>
        <active>true</active>
        <businessProcess>Ruta</businessProcess>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Opportunity_Validation_02_OnlyCommercial</fullName>
        <active>true</active>
        <description>Validate the creation in this Stage only for a Commercial Profile</description>
        <errorConditionFormula>$Profile.Name!=&apos;Administrador del sistema&apos; &amp;&amp; IsNew()&amp;&amp; isPickVal(StageName,&apos;02&apos;) &amp;&amp; ($Profile.Name!=&apos;Ejecutivo&apos;&amp;&amp;$Profile.Name!=&apos;Especialista&apos;)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Only Commercial profile can create Opportunities for this stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Validation_ChangeOwner</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(OwnerId) &amp;&amp; $Profile.Name!=&apos;Administrador del sistema&apos;) &amp;&amp; ((Owner.Profile.Name=&apos;Operativo&apos; || Owner.Profile.Name=&apos;Gerente&apos; || Owner.Profile.Name=&apos;Analista&apos; ||
Owner.Profile.Name=&apos;Asistente&apos;) || (!ISPICKVAL(StageName, &apos;01&apos;) &amp;&amp; !ISPICKVAL(StageName,&apos;02&apos;) &amp;&amp; !ISPICKVAL(StageName ,&apos;03&apos;)))</errorConditionFormula>
        <errorMessage>Cannot change the owner of this opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Validation_ChangeStage</fullName>
        <active>true</active>
        <description>Can not  change stage opportunity manually</description>
        <errorConditionFormula>IF(OR(ISPICKVAL(PRIORVALUE(StageName),'07'),ISPICKVAL(PRIORVALUE(StageName),'06')),IF($Profile.Name != 'Administrador del sistema',IF($Profile.Name != 'Migracion',IF(isProcess__c==false,true,false),false),false) ,
            AND(
            ISCHANGED(StageName),
            
            NOT(ISPICKVAL(StageName,'02')),
            NOT(ISPICKVAL(StageName,'03')),
            OR(
            $Profile.Name == 'Ejecutivo',
            $Profile.Name == 'Gerente',
            $Profile.Name == 'Asistente',
            $Profile.Name == 'Especialista'
            ),
            
            
            IF($User.Id !=OwnerId,IF(OR($Profile.Name!='Administrador del sistema',$Profile.Name!='Migracion'),true,false),IF(NOT(ISPICKVAL(StageName,'07')),true,false))
            
            )
            )</errorConditionFormula>
        <errorMessage>Can not  change to this stage opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Validation_Commercial_Action</fullName>
        <active>true</active>
        <description>you can not create an opportunity with  stage other than Comercial Actions</description>
        <errorConditionFormula>AND(
            IsNew(),
            isPickVal(StageName, &apos;01&apos;),
            OR( $Profile.Name == &apos;Ejecutivo&apos;,
            $Profile.Name == &apos;Gerente&apos;,
            $Profile.Name == &apos;Asistente&apos;,
            $Profile.Name == &apos;Especialista&apos;)
            
            )</errorConditionFormula>
        <errorMessage>you can not create an opportunity with  stage other than Comercial Actions</errorMessage>
    </validationRules>
</CustomObject>